# Atlas

./: .coverage  .env.example  .gitignore  Dockerfile.app  Dockerfile.pipeline  Makefile  README.md  docker-compose.yml  fix_metrics_tests.py  fix_sql.py  generate_all_annotated.py  prepend_headers.py  pyproject.toml  run_pipeline.py  test.db  test_reid.py  test_smoke.py  test_sqlite_date.py  test_tracker.py
app/: __init__.py  anomalies.py  config.py  db.py  exceptions.py  funnel.py  health.py  heatmap.py  ingestion.py  main.py  metrics.py  models.py  pos_loader.py  session.py  validators.py
dashboard/: index.html
data/: store_layout.json
docs/: AUDIT_REPORT.md  CHOICES.md  DESIGN.md  FOLLOWUP_QA.md  PIPELINE_RUN_RESULTS.md  STAFF_DETECTION_DECISION.md  cache_strategy.md
docs/handoffs/: 01_to_02_handoff.md  02_to_03_handoff.md  02_to_06_handoff.md  03_to_04_handoff.md  03_to_07_handoff.md  04_to_08_handoff.md  05_to_06_handoff.md  (+1 more)
migrations/: init.sql
pipeline/: __init__.py  botsort_retail.yaml  camera_map.json  config.py  dedup.py  detect.py  direction.py  emit.py  reid.py  run.sh  staff_detector.py  tracker.py  types.py  zone_mapper.py
scripts/: calibrate_staff_detector.py  debug_cam1_threshold.py  ingest_events.py  setup_data.py  smoke_test.sh  tune_yolo.py  validate_entry_exit.py  validate_reentry.py  validate_zones.py
store-intelligence/: .gitignore
tests/: conftest.py  test_anomalies.py  test_funnel.py  test_health.py  test_heatmap.py  test_ingestion.py  test_metrics.py  test_pipeline.py  test_pos_loader.py  test_session.py  test_staff_detection.py
(+8 files in other folders)
