[project]
name = "store-intelligence"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "asyncpg>=0.29.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "pydantic>=2.7.0",
  "redis>=5.0.0",
  "structlog>=24.1.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "ultralytics>=8.2.0",
  "torchreid>=0.2.5",
  "opencv-python-headless>=4.9.0",
  "numpy>=1.26.0",
  "shapely>=2.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ['app', 'pipeline']
